Added Icon, improved login form

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "menubar": "^4.1.2",
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
+    "react-spinner": "^0.2.6",
     "request": "^2.72.0"
   }
 }
