--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
   "rules": {
     "import/no-extraneous-dependencies": "off",
     "import/no-unresolved": "off",
-    "no-case-declarations": "off"
+    "no-case-declarations": "off",
+    "no-param-reassign": 0
   }
 }
