--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "aws-sdk": "^2.4.4",
     "menubar": "^4.1.2",
+    "node-notifier": "^4.6.0",
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
     "request": "^2.72.0"
