--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "css-loader": "^0.23.1",
     "devtron": "^1.2.1",
     "electron-debug": "^1.0.1",
+    "electron-packager": "^7.3.0",
     "electron-prebuilt": "^1.2.0",
     "eslint": "^3.0.1",
     "eslint-config-airbnb-base": "^4.0.0",
