--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
     "import/no-extraneous-dependencies": "off",
     "import/no-unresolved": "off",
     "no-case-declarations": "off",
-    "no-param-reassign": 0
+    "no-param-reassign": 0,
+    "consistent-return": 0
   }
 }
