--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,9 @@
 {
   "extends": "airbnb-base",
   "rules": {
-    "import/no-extraneous-dependencies": "off",
-    "import/no-unresolved": "off",
-    "no-case-declarations": "off",
+    "import/no-extraneous-dependencies": 0,
+    "import/no-unresolved": 0,
+    "no-case-declarations": 0,
     "no-param-reassign": 0,
     "consistent-return": 0
   }
