--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "rm -fr node_modules && npm install",
     "eslint": "eslint .",
     "prod": "npm prune --production",
-    "package-osx": "npm run prod && electron-packager . --platform=darwin --arch=x64",
+    "package-osx": "electron-packager . --platform=darwin --arch=x64",
     "package-win": "npm run prod && electron packager . --platform=win --arch=x64 --asar",
     "package-linux": "npm run prod && electron-packager . --platform=linux --arch=x64 --asar"
   },
@@ -42,15 +42,18 @@
     "spectron": "^3.3.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
+	"file-loader":"^0.9.0",
     "webpack": "^1.13.1"
   },
   "dependencies": {
     "aws-sdk": "^2.4.4",
     "electron-prebuilt": "^1.2.0",
+    "electron-packager": "^7.3.0",
     "menubar": "^4.1.2",
     "node-notifier": "^4.6.0",
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
-    "request": "^2.72.0"
+    "request": "^2.72.0",
+	"file-type": "^3.9.0"
   }
 }
