--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "rm -fr node_modules && npm install",
     "eslint": "eslint .",
     "prod": "npm prune --production",
-    "package-osx": "electron-packager . --platform=darwin --arch=x64",
+    "package-osx": "npm run prod && electron-packager . --platform=darwin --arch=x64",
     "package-win": "npm run prod && electron packager . --platform=win --arch=x64 --asar",
     "package-linux": "npm run prod && electron-packager . --platform=linux --arch=x64 --asar"
   },
