--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "Amazon Web Services",
     "React"
   ],
-  "author": "Sridar Dhandapani",
+  "author": "Rafal Wilinski",
   "repository": {
     "type": "git",
-    "url": "https://github.com/sridar-dhandapani/s3-uploader"
+    "url": "https://github.com/RafalWilinski/s3-uploader.git"
   },
   "license": "ISC",
   "devDependencies": {
@@ -42,7 +42,7 @@
     "spectron": "^3.3.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-	"file-loader":"^0.9.0",
+    "file-loader":"^0.9.0",
     "webpack": "^1.13.1"
   },
   "dependencies": {
@@ -54,6 +54,6 @@
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
     "request": "^2.72.0",
-	"file-type": "^3.9.0"
+    "file-type": "^3.9.0"
   }
 }
